--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             <div class="col-lg-8 push-lg-4">
                 <h1>Shelter-In-Plates</h1>
                 <p class="text-muted lead">This page includes all designed elements which you may use while creating sites based on this template.</p>
-                <a href="#main" class="btn btn-outline-primary btn-lg"><span>Start Exploring <i class="i-after ti-arrow-down"></i></span></a>
+                <a href="#main" class="btn btn-outline-primary btn-lg"><span>Hi Anthony!<i class="i-after ti-arrow-down"></i></span></a>
                 <a href="chooser.html" class="btn btn-secondary btn-lg"><span>Go to chooser</span></a>
             </div>
         </div>
