draft of hero copy

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 <!-- Title -->
-<title>Soup - Restaurant with Online Ordering System Template</title>
+<title>Shelter-In-Plates: Help keep local restaurants alive while supporting health care workers</title>
 
 <!-- Favicons -->
 <link rel="shortcut icon" href="assets/img/favicon.png">
@@ -173,10 +173,9 @@
 
         <div class="container" data-local-scroll>
             <div class="col-lg-8 push-lg-4">
-                <h1>Shelter-In-Plates</h1>
-                <p class="text-muted lead">This page includes all designed elements which you may use while creating sites based on this template.</p>
-                <a href="#main" class="btn btn-outline-primary btn-lg"><span>Hi Anthony!<i class="i-after ti-arrow-down"></i></span></a>
-                <a href="chooser.html" class="btn btn-secondary btn-lg"><span>Go to chooser</span></a>
+                <h1 id="hero-headline">Shelter-In-Plates</h1>
+                <p class="lead">Help keep local restaurants alive while supporting hard-working health care workers</p>
+                <a href="#main" class="btn btn-outline-primary btn-lg"><span>Learn How<i class="i-after ti-arrow-down"></i></span></a>
             </div>
         </div>
         
