replace shopping cart with join button

--- a/index.html
+++ b/index.html
@@ -126,18 +126,11 @@
                             </li>
                         </ul>
                     </nav>
-                    <div class="module left">
-                        <a href="menu-list-navigation.html" class="btn btn-outline-secondary"><span>Order</span></a>
-                    </div>
                 </div>
                 <div class="col-md-2">
-                    <a href="#" class="module module-cart right" data-toggle="panel-cart">
-                        <span class="cart-icon">
-                            <i class="ti ti-shopping-cart"></i>
-                            <span class="notification">2</span>
-                        </span>
-                        <span class="cart-value">$32.98</span>
-                    </a>
+                    <div class="module right">
+                        <a href="menu-list-navigation.html" class="btn btn-outline-secondary"><span>Join</span></a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -158,10 +151,7 @@
             </a>
         </div>
 
-        <a href="#" class="module module-cart" data-toggle="panel-cart">
-            <i class="ti ti-shopping-cart"></i>
-            <span class="notification">2</span>
-        </a>
+        <a href="menu-list-navigation.html" style='line-height: 34px;' class="module-cart btn btn-outline-secondary"><span>Join</span></a>
 
     </header>
     <!-- Header / End -->
