update anchor tags

--- a/index.html
+++ b/index.html
@@ -111,18 +111,18 @@
         <div class="row">
             <div class="col-md-9"> 
 
-                <!-- Getting Started -->
-                <div id="start">
+                <!-- SECTION -->
+                <div id="what">
                     <h1 class="border-bottom pb-3">What Can Everyone Do?</h1>
                     <p class="lead"><strong>Buy meals for health care workers from your favorite local restaurants.</strong></p>
                     <p class="lead">Help your favorite local restaurant stay in business during the crisis by giving them business.</p>
                     <p class="lead">Support and show your appreciation to health care workers who are working literally around the clock.</p>
                     <p class="lead">Every meal you buy gets delivered daily to local hospitals.</p>
                 </div>
-                <!-- Getting Started / End -->
+                <!-- /SECTION -->
 
-                <!-- Content Elements -->
-                <div id="content-elements" class="py-5">
+                <!-- SECTION -->
+                <div id="restaurants" class="py-5">
                     <h1 class="border-bottom pb-3">Restaurants</h1>
                     <p class="lead">Restaurants everywhere are facing an unprecedented crisis.</p>
                     <p class="lead">Many owners are independent, small operations that <strong>can not withstand sustained sales declines.</strong></p>
@@ -130,28 +130,29 @@
                     <p class="lead">They feed us, nurture us, and care for us; on weekends and on holidays, year in and year out. They provide gathering places for friends and family and contribute to the rich diversity of our communities.</p>
                     <p class="lead"><strong>They have always supported us. Now let us support them.</strong></p>
                 </div>
-                <!-- Content Elements / End -->
+                <!-- /SECTION -->
 
-                <!-- Components -->
-                <div id="components" class="py-5">
+                <!-- SECTION -->
+                <div id="medical-professionals" class="py-5">
                     <h1 class="border-bottom pb-3">Medical Professionals</h1>
                     <p class="lead">Critical health care infrastructure in many areas is under tremendous strain.</p>
                     <p class="lead">Retired medical professionals are being asked to come out of retirement. Part-timers are being urged to be full time.</p>
                     <p class="lead">Doctors, nurses, hospital workers, etc. are working around the clock, putting their own health and well-being in danger, to save the lives of others.</p>
                     <p class="lead"><strong>They work 30 hour shifts to save lives. Let us keep them nourished.</strong></p>
                 </div>
-                <!-- Components / End -->
+                <!-- /SECTION -->
 
-                <!-- Utilities -->
-                <div id="utilities" class="py-5">
+                <!-- SECTION -->
+                <div id="donations" class="py-5">
                     <h1 class="border-bottom pb-3">Donations</h1>
                     <p class="lead">Several donors have pledged to <strong>match</strong> meals to be gifted to frontline health care workers.</p>
                     <p class="lead">When matching donations are available, for every meal that is purchased for a health care worker, <strong>TWO</strong> will be delivered!</p>
                     <p class="lead">If you are able to contribute in this way, please get in touch directly with <a href="mailto:eric@shelter-in-plates.com">eric@shelter-in-plates.com</a>.</p>
                 </div>
+                <!-- /SECTION -->
 
-                <!-- Configuration -->
-                <div id="configuration" class="py-5">
+                <!-- SECTION -->
+                <div id="about" class="py-5">
                     <h1 class="border-bottom pb-3">About</h1>
                     <p class="lead">This site and service was created and is being maintained entirely by volunteers.</p>
                     <p class="lead">We believe that local, independent restaurants are the lifeblood of our communities.</p>
@@ -176,41 +177,42 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
+                <!-- /SECTION -->
 
-                <!-- Files & Credits -->
-                <div id="files" class="py-5">
+                <!-- SECTION -->
+                <div id="inspiration" class="py-5">
                     <!-- Credits -->
                     <div id="credits" class="py-3">
                         <h2>Inspiration</h2>
                         <p class="lead">This project was inspired by amazing <a href='https://www.facebook.com/joanna.argus' target='_blank'>Joanna Argus</a> of <a href='https://www.instagram.com/1215winecoffee/' target='_blank'>1215 Wine Bar &amp; Coffee Lab</a> and <a href='https://www.instagram.com/pleasantryotr/' target='_blank'>The Pleasantry</a> in beautiful Cincinnati.</p>
                     </div>
                 </div>
-                <!-- Files & Credits / End -->
+                <!-- /SECTION -->
 
             </div>
-            <div class="col-md-3 hidden-sm hidden-xs">
 
+            <!-- Right side menu navigation-->
+            <div class="col-md-3 hidden-sm hidden-xs">
                 <nav id="side-navigation" class="stick-to-content pt-5" data-local-scroll>
                     <ul class="nav nav-vertical">
                         <li class="nav-item">
-                            <a class="nav-link" href="#start"><span>What Can Everyone Do?</span></a>
+                            <a class="nav-link" href="#what"><span>What Can Everyone Do?</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#content-elements"><span>Restaurants</span></a>
+                            <a class="nav-link" href="#restaurants"><span>Restaurants</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#components"><span>Medical Professionals</span></a>
+                            <a class="nav-link" href="#medical-professionals"><span>Medical Professionals</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#utilities"><span>Donations</span></a>
+                            <a class="nav-link" href="#donations"><span>Donations</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#configuration"><span>About</span></a>
+                            <a class="nav-link" href="#about"><span>About</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#files"><span>Inspiration</span></a>
+                            <a class="nav-link" href="#inspiration"><span>Inspiration</span></a>
                         </li>
                     </ul>
                 </nav>
