--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 <div id="donations" class="py-5">
                     <h1 class="border-bottom pb-3">Donations</h1>
                     <p class="lead">Several donors have pledged to <strong>match</strong> meals to be gifted to frontline health care workers.</p>
-                    <p class="lead">When matching donations are available, for every meal that is purchased for a health care worker, <strong>TWO</strong> will be delivered!</p>
+                    <p class="lead">When matching donations are available, for every meal that is purchased for a health care worker, an additional one will be donated.</p>
                     <p class="lead">If you are able to contribute in this way, please get in touch directly with <a href="mailto:eric@shelter-in-plates.com">eric@shelter-in-plates.com</a>.</p>
                 </div>
                 <!-- /SECTION -->
