--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
                     <nav class="module module-navigation left mr-4">
                         <ul id="nav-main" class="nav nav-main">
                             <li style="border-bottom: 2px solid black;"><a href="#">Home</a></li>
-                            <li><a href="page-offers.html">Restaurants: Learn More</a></li>
-                            <li><a href="page-contact.html">Diners: Invite Your Favorite Restaurant</a></li>
+                            <li><a href="#">Restaurants: Learn More</a></li>
+                            <li><a href="#">Diners: Invite Your Favorite Restaurant</a></li>
                         </ul>
                     </nav>
                 </div>
                 <div class="col-md-2">
                     <div class="module right">
-                        <a href="menu-list-navigation.html" class="btn btn-outline-secondary"><span>Join</span></a>
+                        <a href="#" class="btn btn-outline-secondary"><span>Join</span></a>
                     </div>
                 </div>
             </div>
@@ -86,7 +86,7 @@
             </a>
         </div>
 
-        <a href="menu-list-navigation.html" style='line-height: 26px; top: 3px;' class="module-cart btn btn-outline-secondary"><span>Join</span></a>
+        <a href="#" style='line-height: 26px; top: 3px;' class="module-cart btn btn-outline-secondary"><span>Join</span></a>
 
     </header>
     <!-- Header / End -->
