--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     <p class="lead">Critical health care infrastructure in many areas is under tremendous strain.</p>
                     <p class="lead">Retired medical professionals are being asked to come out of retirement. Part-timers are being urged to be full time.</p>
                     <p class="lead">Doctors, nurses, hospital workers, etc. are working around the clock, putting their own health and well-being in danger, to save the lives of others.</p>
-                    <p class="lead"><strong>They work 30 hour shifts to save lives. Let us keep them nourished.</strong></p>
+                    <p class="lead"><strong>They work long hours to save lives. Let us keep them nourished.</strong></p>
                 </div>
                 <!-- /SECTION -->
 
