--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <!-- Content -->
 <div id="content">
 
-    <section class="section section-lg bg-light">
+    <section id="hero" class="section section-lg bg-light">
 
         <div class="container" data-local-scroll>
             <div class="col-lg-8 push-lg-4">
