--- a/index.html
+++ b/index.html
@@ -94,8 +94,7 @@
 <!-- Content -->
 <div id="content">
 
-    <section id="hero" class="section section-lg bg-light">
-
+    <section id="hero" class="section section-lg bg-light" style='background-image: url("assets/img/photos/bg-desk.jpg"); background-size: cover;'>
         <div class="container" data-local-scroll>
             <div class="col-lg-8 push-lg-4">
                 <h1 id="hero-headline">Shelter-In-Plates</h1>
