connect placeholders for other pages

--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
                     <nav class="module module-navigation left mr-4">
                         <ul id="nav-main" class="nav nav-main">
                             <li style="border-bottom: 2px solid black;"><a href="#">Home</a></li>
-                            <li><a href="#">Restaurants: Learn More</a></li>
-                            <li><a href="#">Diners: Invite Your Favorite Restaurant</a></li>
+                            <li><a href="learn-more.html">Restaurants: Learn More</a></li>
+                            <li><a href="invite-restaurant.html">Diners: Invite Your Favorite Restaurant</a></li>
+                            <li><a href="sample-page.html">Sample</a></li>
                         </ul>
                     </nav>
                 </div>
