add placeholder content for new pages

--- a/invite-restaurant.html
+++ b/invite-restaurant.html
@@ -171,8 +171,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-7 push-lg-5">
-                        <h1 class="mb-0">About Us</h1>
-                        <h4 class="text-muted mb-0">Some informations about our restaurant</h4>
+                        <h1 class="mb-0">Invite A Restaurant</h1>
+                        <h4 class="text-muted mb-0">Support your favorite places and feed front line health care workers </h4>
                     </div>
                 </div>
             </div>
@@ -187,14 +187,18 @@
         
             <div class="container">
                 <div class="col-lg-5 push-lg-5 col-md-9 push-md-3">
-                    <div class="rate mb-5 rate-lg"><i class="fa fa-star active"></i><i class="fa fa-star active"></i><i class="fa fa-star active"></i><i class="fa fa-star active"></i><i class="fa fa-star"></i></div>
-                    <h2>The best food in London!</h2>
-                    <p class="lead">Donec a eros metus. Vivamus volutpat leo dictum risus ullamcorper condimentum. Cras sollicitudin varius condimentum. Praesent a dolor sem....</p>
-                    <p>Nam eleifend elementum sapien et bibendum. Nunc ac diam efficitur, ultrices lorem quis, consectetur odio. Nullam vulputate, eros quis accumsan cursus, elit lectus bibendum nulla, sed dapibus ligula tellus at purus. Fusce id eros id mi cursus semper. Quisque efficitur bibendum nunc a consectetur. Maecenas vitae quam iaculis, scelerisque purus nec, varius purus. Nullam eget varius elit. Donec eget facilisis nunc, non rutrum lorem.</p>
-                    <h6>Mark Johnson, Chef</h6>
-                    <img src="assets/img/svg/sign.svg" alt="" class="mb-5">
-                    <h4>What people say about Us?</h4>
-                    <a href="page-reviews.html" class="btn btn-outline-primary"><span>Check our reviews</span></a>
+                    <h2>How to tell your favorite restaurant</h2>
+                    <p>Donec a eros metus. Vivamus volutpat leo dictum risus ullamcorper condimentum. Cras sollicitudin varius condimentum. Praesent a dolor sem....</p>
+                    <p>Nam eleifend elementum sapien et bibendum. Nunc ac diam efficitur, ultrices lorem quis, consectetur odio.</p>
+                    <h2>Benefits for restaurants</h2>
+                    <p>Donec a eros metus. Vivamus volutpat leo dictum risus ullamcorper condimentum. Cras sollicitudin varius condimentum. Praesent a dolor sem....</p>
+                    <h2>How you can help</h2>
+                    <p>Donec a eros metus. Vivamus volutpat leo dictum risus ullamcorper condimentum. Cras sollicitudin varius condimentum. Praesent a dolor sem....</p>
+                    <p>Nam eleifend elementum sapien et bibendum. Nunc ac diam efficitur, ultrices lorem quis, consectetur odio.</p>
+                    <h2>Do you like ice cream?</h2>
+                    <p>Donec a eros metus. Vivamus volutpat leo dictum risus ullamcorper condimentum. Cras sollicitudin varius condimentum. Praesent a dolor sem....</p>
+                    <a href="#" class="btn btn-outline-primary"><span>Is this a button?</span></a>
+                    <a href="#" class="btn btn-outline-secondary"><span>Definitely, yes.</span></a>
                 </div>
             </div>
 
