--- a/sample-page.html
+++ b/sample-page.html
@@ -171,8 +171,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 push-lg-4">
-                        <h1 class="mb-0">Menu Grid</h1>
-                        <h4 class="text-muted mb-0">Some informations about our restaurant</h4>
+                        <h1 class="mb-0">Floriole</h1>
+                        <h4 class="text-muted mb-0">Join Floriole in Helping Hospital Workers Fight This Pandemic</h4>
                     </div>
                 </div>
             </div>
