--- a/learn-more.html
+++ b/learn-more.html
@@ -172,8 +172,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 push-lg-4">
-                        <h1 class="mb-0">FAQ</h1>
-                        <h4 class="text-muted mb-0">Some informations about our restaurant</h4>
+                        <h1 class="mb-0">Learn More</h1>
+                        <h4 class="text-muted mb-0">Participation information for chefs, owners, &amp; operators</h4>
                     </div>
                 </div>
             </div>
