--- a/sample-page.html
+++ b/sample-page.html
@@ -44,97 +44,24 @@
                 <div class="col-md-3">
                     <!-- Logo -->
                     <div class="module module-logo dark">
-                        <a href="index.html">
-                            <img src="assets/img/logo-light.svg" alt="" width="88">
-                        </a>
+                        <img src="assets/img/logo-light.svg" alt="" width="88">
                     </div>
                 </div>
                 <div class="col-md-7">
                     <!-- Navigation -->
                     <nav class="module module-navigation left mr-4">
                         <ul id="nav-main" class="nav nav-main">
-                            <li class="has-dropdown">
-                                <a href="#">Home</a>
-                                <div class="dropdown-container">
-                                    <ul>
-                                        <li><a href="index.html">Home Basic</a></li>
-                                        <li><a href="index-burgers.html">Home Burgers</a></li>
-                                        <li><a href="index-slider.html">Home Fullwidth Slider</a></li>
-                                        <li><a href="index-video.html">Home Video</a></li>
-                                    </ul>
-                                </div>
-                            </li>
-                            <li class="has-dropdown">
-                                <a href="#">About</a>
-                                <div class="dropdown-container">
-                                    <ul class="dropdown-mega">
-                                        <li><a href="page-about.html">About Us</a></li>
-                                        <li><a href="page-services.html">Services</a></li>
-                                        <li><a href="page-gallery.html">Gallery</a></li>
-                                        <li><a href="page-reviews.html">Reviews</a></li>
-                                        <li><a href="page-faq.html">FAQ</a></li>
-                                    </ul>
-                                    <div class="dropdown-image">
-                                        <img src="assets/img/photos/dropdown-about.jpg" alt="">
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="has-dropdown">
-                                <a href="#">Menu</a>
-                                <div class="dropdown-container">
-                                    <ul>
-                                        <li class="has-dropdown">
-                                            <a href="#">List</a>
-                                            <ul>
-                                                <li><a href="menu-list-navigation.html">Navigation</a></li>
-                                                <li><a href="menu-list-collapse.html">Collapse</a></li>
-                                            </ul>
-                                        </li>
-                                        <li class="has-dropdown">
-                                            <a href="#">Grid</a>
-                                            <ul>
-                                                <li><a href="menu-grid-navigation.html">Navigation</a></li>
-                                                <li><a href="menu-grid-collapse.html">Collapse</a></li>
-                                            </ul>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </li>
-                            <li><a href="page-offers.html">Offers</a></li>
-                            <li><a href="page-contact.html">Contact</a></li>
-                            <li class="has-dropdown">   
-                                <a href="#">More</a>
-                                <div class="dropdown-container">
-                                    <ul class="dropdown-mega">
-                                        <li><a href="page-offer-single.html">Offer single</a></li>
-                                        <li><a href="page-product.html">Product</a></li>
-                                        <li><a href="book-a-table.html">Book a table</a></li>
-                                        <li><a href="checkout.html">Checkout</a></li>
-                                        <li><a href="confirmation.html">Confirmation</a></li>
-                                        <li><a href="blog.html">Blog</a></li>
-                                        <li><a href="blog-sidebar.html">Blog + Sidebar</a></li>
-                                        <li><a href="blog-post.html">Blog Post</a></li>
-                                        <li><a href="documentation.html">Documentation</a></li>
-                                    </ul>
-                                    <div class="dropdown-image">
-                                        <img src="assets/img/photos/dropdown-more.jpg" alt="">
-                                    </div>
-                                </div>
-                            </li>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="learn-more.html">Restaurants: Learn More</a></li>
+                            <li><a href="invite-restaurant.html">Diners: Invite Your Favorite Restaurant</a></li>
+                            <li class="selected"><a href="sample-page.html">Sample</a></li>
                         </ul>
                     </nav>
-                    <div class="module left">
-                        <a href="menu-list-navigation.html" class="btn btn-outline-secondary"><span>Order</span></a>
-                    </div>
                 </div>
                 <div class="col-md-2">
-                    <a href="#" class="module module-cart right" data-toggle="panel-cart">
-                        <span class="cart-icon">
-                            <i class="ti ti-shopping-cart"></i>
-                            <span class="notification">2</span>
-                        </span>
-                        <span class="cart-value">$32.98</span>
-                    </a>
+                    <div class="module right">
+                        <a href="#" class="btn btn-outline-secondary"><span>Join</span></a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -150,15 +77,10 @@
         </div>    
 
         <div class="module module-logo">
-            <a href="index.html">
-                <img src="assets/img/logo-horizontal-dark.svg" alt="">
-            </a>
+            <img src="assets/img/logo-horizontal-dark.svg" alt="">
         </div>
 
-        <a href="#" class="module module-cart" data-toggle="panel-cart">
-            <i class="ti ti-shopping-cart"></i>
-            <span class="notification">2</span>
-        </a>
+        <a href="#" style='line-height: 26px; top: 3px;' class="module-cart btn btn-outline-secondary"><span>Join</span></a>
 
     </header>
     <!-- Header / End -->
