clean up copy a bit

--- a/learn-more.html
+++ b/learn-more.html
@@ -109,7 +109,7 @@
                     <div class="col-md-3">
                         <!-- Side Navigation -->
                         <nav id="side-navigation" class="stick-to-content pt-4" data-local-scroll>
-                            <h5 class="mb-3"><i class="ti ti-align-justify mr-3 text-muted"></i>Pick a content:</h5>
+                            <h5 class="mb-3"><i class="ti ti-align-justify mr-3 text-muted"></i>Sections</h5>
                             <ul class="nav nav-vertical">
                                 <li class="nav-item">
                                     <a href="#faq1" class="nav-link">General</a>
