--- a/sample-page.html
+++ b/sample-page.html
@@ -116,7 +116,7 @@
                                             <h6 class="mb-0">Buy a meal: Once</h6>
                                             <span class="text-muted text-sm">We'll deliver a healthy, nourishing meal to hospital healthcare worker in Chicago on your behalf.</span>
                                             <div class="row align-items-center mt-4">
-                                                <div class="col-sm-6"><span class="text-md mr-4">$10.00 <span class="text-muted">one time</span></span></div>
+                                                <div class="col-sm-6"><span class="text-md mr-4">$11.00 <span class="text-muted">one time</span></span></div>
                                                 <div class="col-sm-6 text-sm-right mt-2 mt-sm-0"><button class="btn btn-outline-secondary btn-sm" data-target="#productModal" data-toggle="modal"><span>Buy</span></button></div>
                                             </div>
                                         </div>
@@ -262,7 +262,7 @@
         <div class="modal-content">
             <div class="modal-header modal-header-lg dark bg-dark">
                 <div class="bg-image"><img src="assets/img/photos/modal-add.jpg" alt=""></div>
-                <h4 class="modal-title">Specify your dish</h4>
+                <h4 class="modal-title">Order Details</h4>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><i class="ti-close"></i></button>
             </div>
             <div class="modal-product-details">
@@ -282,7 +282,7 @@
                             <input name="radio_title_size" type="radio" class="custom-control-input">
                             <span class="custom-control-indicator"></span>
                         </label>
-                        <a href="#panelDetailsSize" data-toggle="collapse">Size</a>
+                        <a href="#panelDetailsSize" data-toggle="collapse">Order</a>
                     </h5>
                     <div id="panelDetailsSize" class="collapse show">
                         <div class="panel-details-content">
@@ -290,77 +290,15 @@
                                 <label class="custom-control custom-radio">
                                     <input name="radio_size" type="radio" class="custom-control-input" checked>
                                     <span class="custom-control-indicator"></span>
-                                    <span class="custom-control-description">Small - 100g ($9.99)</span>
+                                    <span class="custom-control-description">1 Meal ($11.00)</span>
                                 </label>
                             </div>
                             <div class="form-group">
                                 <label class="custom-control custom-radio">
                                     <input name="radio_size" type="radio" class="custom-control-input">
                                     <span class="custom-control-indicator"></span>
-                                    <span class="custom-control-description">Medium - 200g ($14.99)</span>
+                                    <span class="custom-control-description">Weekly Meal Subscription ($10.00/week)</span>
                                 </label>
-                            </div>
-                            <div class="form-group">
-                                <label class="custom-control custom-radio">
-                                    <input name="radio_size" type="radio" class="custom-control-input">
-                                    <span class="custom-control-indicator"></span>
-                                    <span class="custom-control-description">Large - 350g ($21.99)</span>
-                                </label>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- Panel Details / Additions -->
-                <div class="panel-details">
-                    <h5 class="panel-details-title">
-                        <label class="custom-control custom-radio">
-                            <input name="radio_title_additions" type="radio" class="custom-control-input">
-                            <span class="custom-control-indicator"></span>
-                        </label>
-                        <a href="#panelDetailsAdditions" data-toggle="collapse">Additions</a>
-                    </h5>
-                    <div id="panelDetailsAdditions" class="collapse">
-                        <div class="panel-details-content">
-                            <div class="row">
-                                <div class="col-sm-6">
-                                    <div class="form-group">
-                                        <label class="custom-control custom-checkbox">
-                                            <input type="checkbox" class="custom-control-input">
-                                            <span class="custom-control-indicator"></span>
-                                            <span class="custom-control-description">Tomato ($1.29)</span>
-                                        </label>
-                                    </div>
-                                    <div class="form-group">
-                                        <label class="custom-control custom-checkbox">
-                                            <input type="checkbox" class="custom-control-input">
-                                            <span class="custom-control-indicator"></span>
-                                            <span class="custom-control-description">Ham ($1.29)</span>
-                                        </label>
-                                    </div>
-                                    <div class="form-group">
-                                        <label class="custom-control custom-checkbox">
-                                            <input type="checkbox" class="custom-control-input">
-                                            <span class="custom-control-indicator"></span>
-                                            <span class="custom-control-description">Chicken ($1.29)</span>
-                                        </label>
-                                    </div>
-                                </div>
-                                <div class="col-sm-6">
-                                    <div class="form-group">
-                                        <label class="custom-control custom-checkbox">
-                                            <input type="checkbox" class="custom-control-input">
-                                            <span class="custom-control-indicator"></span>
-                                            <span class="custom-control-description">Cheese($1.29)</span>
-                                        </label>
-                                    </div>
-                                    <div class="form-group">
-                                        <label class="custom-control custom-checkbox">
-                                            <input type="checkbox" class="custom-control-input">
-                                            <span class="custom-control-indicator"></span>
-                                            <span class="custom-control-description">Bacon ($1.29)</span>
-                                        </label>
-                                    </div>
-                                </div>
                             </div>
                         </div>
                     </div>
@@ -372,14 +310,14 @@
                             <input name="radio_title_other" type="radio" class="custom-control-input">
                             <span class="custom-control-indicator"></span>
                         </label>
-                        <a href="#panelDetailsOther" data-toggle="collapse">Other</a>
+                        <a href="#panelDetailsOther" data-toggle="collapse">Leave a Personalized Note</a>
                     </h5>
                     <div id="panelDetailsOther" class="collapse">
-                        <textarea cols="30" rows="4" class="form-control" placeholder="Put this any other informations..."></textarea>
+                        <textarea cols="30" rows="4" class="form-control" placeholder="Please leave a note with your name, what part of town you are from, and a message for the healthcare worker who receives this meal!"></textarea>
                     </div>
                 </div>
             </div>
-            <button type="button" class="modal-btn btn btn-secondary btn-block btn-lg" data-dismiss="modal"><span>Add to Cart</span></button>
+            <button type="button" class="modal-btn btn btn-secondary btn-block btn-lg" data-dismiss="modal"><span>Check Out</span></button>
         </div>
     </div>
 </div>
