change sample page to dark background image

--- a/sample-page.html
+++ b/sample-page.html
@@ -89,7 +89,8 @@
     <div id="content">
 
         <!-- Page Title -->
-        <div class="page-title bg-light">
+        <div class="page-title bg-dark dark">
+            <div class="bg-image bg-parallax"><img src="assets/img/photos/bg-croissant.jpg" alt=""></div>
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 push-lg-4">
