make home links clickable

--- a/invite-restaurant.html
+++ b/invite-restaurant.html
@@ -51,7 +51,7 @@
                     <!-- Navigation -->
                     <nav class="module module-navigation left mr-4">
                         <ul id="nav-main" class="nav nav-main">
-                            <li><a href="#">Home</a></li>
+                            <li><a href="index.html">Home</a></li>
                             <li><a href="learn-more.html">Restaurants: Learn More</a></li>
                             <li class="selected"><a href="invite-restaurant.html">Diners: Invite Your Favorite Restaurant</a></li>
                             <li><a href="sample-page.html">Sample</a></li>
