copy for sample page from joanna

--- a/sample-page.html
+++ b/sample-page.html
@@ -108,6 +108,18 @@
                     <div class="col-md-10 push-md-1" role="tablist">
                         <!-- Menu Category / Burgers -->
                         <div id="Burgers" class="menu-category">
+                            <div class="restaurant-page-message">
+                                <p>
+                                The people working in Emergency Rooms and ICUs in Chicago - and all over the world - are our heroes!
+                                </p>
+                                <p>
+                                Imagine that instead of “distancing” right now, you were leaving home each day to interact with hundreds of people who all have in common the fact that they are sick. The doctors, nurses, techs and administrators do their work with care, with professionalism, and with selflessness. But they’re not immune to anxiety and they certainly feel overwhelmed during intense times like these.
+                                </p>
+                                <p>
+                                Through your generosity, we would like to nourish and support these teams, to show them how appreciated they are! ❤️
+                                </p>
+                            </div>
+
                             <div id="menuBurgersContent" class="menu-category-content padded collapse show">
                                 <div class="row gutters-sm">
                                     <div class="col-lg-4 col-6">
@@ -135,6 +147,25 @@
                                         </div>
                                     </div>
                                 </div>
+                            </div>
+                            <div class="restaurant-page-message">
+
+                                <p>
+Every meal you purchase for a healthcare worker will be prepared at Floriole and delivered to an Emergency Department in Chicago.
+                                </p>
+                                <p>
+When making your purchase, please include a message for the hospital staff, your name, and what part of town you are from. We hope to provide these people with the sense that the whole city is behind them.
+                                </p>
+                                <p>
+                                  With every purchase of a meal, we will follow up and let you know what hospital your meal was delivered to and keep you up to date with our journey.
+                                </p>
+                                <p>
+                                  For all weekly meal purchase subscriptions:
+                                  <ul>
+                                    <li>you can cancel at any time</li>
+                                    <li>we will notify you 2 days in advance of your next charge in case you are unable to continue</li>
+                                    <li>we will also keep you up to date with when and where your meals are delivered</li>
+                                </p>
                             </div>
                         </div>
                     </div>
