--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <ul id="nav-main" class="nav nav-main">
                             <li class="selected"><a href="index.html">Home</a></li>
                             <li><a href="learn-more.html">Restaurants: Learn More</a></li>
-                            <li><a href="invite-restaurant.html">Diners: Invite Your Favorite Restaurant</a></li>
+                            <li><a href="invite-restaurant.html">Diners: Help Out</a></li>
                             <li><a href="sample-page.html">Sample</a></li>
                         </ul>
                     </nav>
@@ -181,8 +181,8 @@
                     <!-- Credits -->
                     <div id="credits" class="py-3">
                         <h2>Inspiration</h2>
-                        <p class="lead">This project was inspired by amazing <a href='https://www.facebook.com/joanna.argus' target='_blank'>Joanna Argus</a> of <a href='https://www.instagram.com/1215winecoffee/' target='_blank'>1215 Wine Bar &amp; Coffee Lab</a> and <a href='https://www.instagram.com/pleasantryotr/' target='_blank'>The Pleasantry</a> in beautiful Cincinnati.</p>
-                        <p class="lead">Joanna rallied her community to donate over 2500 meals in a few short days to Cincinnati area hospitals.</p>
+                        <p class="lead">This project was inspired by amazing <a href='https://www.facebook.com/joanna.argus' target='_blank'>Joanna Argus Kirkendall</a> of <a href='https://www.instagram.com/pleasantryotr/' target='_blank'>The Pleasantry</a> and <a href='https://www.instagram.com/1215winecoffee/' target='_blank'>1215 Wine Bar &amp; Coffee Lab</a> in beautiful Cincinnati.</p>
+                        <p class="lead">Joanna rallied her community to donate over 3000 meals in a few short days to Cincinnati area hospitals.</p>
                         <p class="lead">We're hoping to encourage other communities to support both their front line health care workers and their independent local restaurants by doing the same.</p>
                     </div>
                 </div>
