add contributor images

--- a/index.html
+++ b/index.html
@@ -160,16 +160,15 @@
                         <div class="example-box">
                             <div class="example-box-title">Contributors</div>
                             <div class="example-box-content">
-                                <img src="assets/img/avatars/avatar01.jpg" alt="..." class="img-thumbnail">
-                                <img src="assets/img/avatars/avatar01.jpg" alt="..." class="img-thumbnail">
-                                <img src="assets/img/avatars/avatar01.jpg" alt="..." class="img-thumbnail">
-                                <img src="assets/img/avatars/avatar01.jpg" alt="..." class="img-thumbnail">
-                                <img src="assets/img/avatars/avatar01.jpg" alt="..." class="img-thumbnail">
-                                <img src="assets/img/avatars/avatar01.jpg" alt="..." class="img-thumbnail">
-                                <img src="assets/img/avatars/avatar01.jpg" alt="..." class="img-thumbnail">
-                                <img src="assets/img/avatars/avatar01.jpg" alt="..." class="img-thumbnail">
-                                <img src="assets/img/avatars/avatar01.jpg" alt="..." class="img-thumbnail">
-                                <img src="assets/img/avatars/avatar01.jpg" alt="..." class="img-thumbnail">
+                                <img src="assets/img/avatars/alex.jpg" alt="..." class="img-thumbnail">
+                                <img src="assets/img/avatars/anthony.jpg" alt="..." class="img-thumbnail">
+                                <img src="assets/img/avatars/eric.jpg" alt="..." class="img-thumbnail">
+                                <img src="assets/img/avatars/henry.jpg" alt="..." class="img-thumbnail">
+                                <img src="assets/img/avatars/john2.jpg" alt="..." class="img-thumbnail">
+                                <img src="assets/img/avatars/melodie.jpg" alt="..." class="img-thumbnail">
+                                <img src="assets/img/avatars/mg.jpg" alt="..." class="img-thumbnail">
+                                <img src="assets/img/avatars/robin.jpg" alt="..." class="img-thumbnail">
+                                <img src="assets/img/avatars/shane.jpg" alt="..." class="img-thumbnail">
                             </div>
                         </div>
                     </div>
