Add first names to contributor alt tags

--- a/index.html
+++ b/index.html
@@ -160,15 +160,16 @@
                         <div class="example-box">
                             <div class="example-box-title">Contributors</div>
                             <div class="example-box-content">
-                                <img src="assets/img/avatars/alex.jpg" alt="..." class="img-thumbnail">
-                                <img src="assets/img/avatars/anthony.jpg" alt="..." class="img-thumbnail">
-                                <img src="assets/img/avatars/eric.jpg" alt="..." class="img-thumbnail">
-                                <img src="assets/img/avatars/henry.jpg" alt="..." class="img-thumbnail">
-                                <img src="assets/img/avatars/john2.jpg" alt="..." class="img-thumbnail">
-                                <img src="assets/img/avatars/melodie.jpg" alt="..." class="img-thumbnail">
-                                <img src="assets/img/avatars/mg.jpg" alt="..." class="img-thumbnail">
-                                <img src="assets/img/avatars/robin.jpg" alt="..." class="img-thumbnail">
-                                <img src="assets/img/avatars/shane.jpg" alt="..." class="img-thumbnail">
+                                <img src="assets/img/avatars/alex.jpg" alt="Alex" class="img-thumbnail">
+                                <img src="assets/img/avatars/alexa.jpg" alt="Alexa" class="img-thumbnail">
+                                <img src="assets/img/avatars/anthony.jpg" alt="Anthony" class="img-thumbnail">
+                                <img src="assets/img/avatars/eric.jpg" alt="Eric" class="img-thumbnail">
+                                <img src="assets/img/avatars/henry.jpg" alt="Henry" class="img-thumbnail">
+                                <img src="assets/img/avatars/john2.jpg" alt="John" class="img-thumbnail">
+                                <img src="assets/img/avatars/melodie.jpg" alt="Melodie" class="img-thumbnail">
+                                <img src="assets/img/avatars/mg.jpg" alt="Mary Grace" class="img-thumbnail">
+                                <img src="assets/img/avatars/robin.jpg" alt="Robin" class="img-thumbnail">
+                                <img src="assets/img/avatars/shane.jpg" alt="Shane" class="img-thumbnail">
                             </div>
                         </div>
                     </div>
