Use sample restaurant info

--- a/sample-page.html
+++ b/sample-page.html
@@ -94,8 +94,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 push-lg-4">
-                        <h1 class="mb-0">Floriole</h1>
-                        <h4 class="text-muted mb-0">Join Floriole in Helping Hospital Workers Fight This Pandemic</h4>
+                        <h1 class="mb-0">Osea Cafe</h1>
+                        <h4 class="text-muted mb-0">Join Osea Cafe in Helping Hospital Workers Fight This Pandemic</h4>
                     </div>
                 </div>
             </div>
@@ -167,6 +167,8 @@ When making your purchase, please include a message for the hospital staff, your
                                     <li>we will also keep you up to date with when and where your meals are delivered</li>
                                   </ul>
                                 </p>
+                                <h6>James Bascharon, Chef/Owner</h6>
+                                <img src="assets/img/svg/sign.svg" alt="" class="mb-5">
                             </div>
                         </div>
                     </div>
