--- a/invite-restaurant.html
+++ b/invite-restaurant.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 <!-- Title -->
-<title>Soup - Restaurant with Online Ordering System Template</title>
+<title>Shelter-In-Plates: Help keep local restaurants alive while supporting health care professionals</title>
 
 <!-- Favicons -->
 <link rel="shortcut icon" href="assets/img/favicon.png">
