DRY: set all page title styles in one place

--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
 <!-- Content -->
 <div id="content">
 
-    <section id="hero" class="section section-lg bg-light" style='background-image: url("assets/img/photos/bg-desk.jpg"); background-size: cover;'>
+    <section id="hero" class="section section-lg page-title bg-light" style='background-image: url("assets/img/photos/bg-desk.jpg"); background-size: cover;'>
         <div class="container" data-local-scroll>
             <div class="col-lg-8 push-lg-4">
-                <h1 id="hero-headline">Shelter-In-Plates</h1>
+                <h1>Shelter-In-Plates</h1>
                 <p class="lead">Help keep local restaurants alive while supporting hard-working health care professionals</p>
                 <a href="#main" class="btn btn-outline-primary btn-lg"><span>Learn How<i class="i-after ti-arrow-down"></i></span></a>
             </div>
