--- a/sample-page.html
+++ b/sample-page.html
@@ -74,7 +74,7 @@
 
         <div class="module module-nav-toggle">
             <a href="#" id="nav-toggle" data-toggle="panel-mobile"><span></span><span></span><span></span><span></span></a>
-        </div>    
+        </div>
 
         <div class="module module-logo">
             <img src="assets/img/logo-horizontal-dark.svg" alt="">
@@ -151,7 +151,7 @@
                             <div class="restaurant-page-message">
 
                                 <p>
-Every meal you purchase for a healthcare worker will be prepared at Floriole and delivered to an Emergency Department in Chicago.
+Every meal you purchase for a healthcare worker will be prepared at Osea and delivered to an Emergency Department in Chicago.
                                 </p>
                                 <p>
 When making your purchase, please include a message for the hospital staff, your name, and what part of town you are from. We hope to provide these people with the sense that the whole city is behind them.
