--- a/sample-page.html
+++ b/sample-page.html
@@ -126,7 +126,7 @@
                                         <!-- Menu Item -->
                                         <div class="menu-item menu-grid-item">
                                             <img class="mb-4" src="assets/img/products/product-burger.jpg" alt="">
-                                            <h6 class="mb-0">Buy a meal: Once</h6>
+                                            <h6 class="mb-2">Buy a meal for a healthcare worker: Once</h6>
                                             <span class="text-muted text-sm">We'll deliver a healthy, nourishing meal to hospital healthcare worker in Chicago on your behalf.</span>
                                             <div class="row align-items-center mt-4">
                                                 <div class="col-sm-6"><span class="text-md mr-4">$11.00 <span class="text-muted">one time</span></span></div>
@@ -138,7 +138,7 @@
                                         <!-- Menu Item -->
                                         <div class="menu-item menu-grid-item">
                                             <img class="mb-4" src="assets/img/products/product-chicken-burger.jpg" alt="">
-                                            <h6 class="mb-0">Buy a meal: Weekly</h6>
+                                            <h6 class="mb-2">Buy a meal for a healthcare worker: Weekly</h6>
                                             <span class="text-muted text-sm">We'll deliver a healthy, nourishing meal to hospital healthcare worker in Chicago on your behalf.</span>
                                             <div class="row align-items-center mt-4">
                                                 <div class="col-sm-6"><span class="text-md mr-4">$10.00 <span class="text-muted">per week</span> </span></div>
